--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -1,3 +1,4 @@
+{% if !page.tagline %}
 <div class="page-header">
   <h1>
     {{ page.title }} 
@@ -6,6 +7,7 @@
     {% endif %}
   </h1>
 </div>
+{% endif %}
 
 <div class="row">
   <div class="span8">
