--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -1,11 +1,13 @@
-
+{% if page.titie %}
 <div class="page-header">
   <h1>
     {{ page.title }} 
-    
+    {% if page.tagline %} 
+	<small>{{ page.tagline }}</small> 
+	{% endif %}
   </h1>
 </div>
-
+{% endif %}
 <div class="row">
   <div class="span8">
     {{ content }}
