--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -20,10 +20,10 @@
     <script src="{{ ASSET_PATH }}/js/jquery.min.js"></script>
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://lib.sinaapp.com/js/bootstrap/latest/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ ASSET_PATH }}/bootstrap/latest/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{ ASSET_PATH }}/google-code-prettify/prettify.js"></script>{% if page.codes %}{% for code in page.codes %} 
     <script type="text/javascript" src="{{ ASSET_PATH }}/google-code-prettify/lang-{{ code }}.js"></script>{% endfor %}{% endif %}
-	<link href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+	<link href="{{ ASSET_PATH }}/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/google-code-prettify/prettify.css" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">    
