--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -10,15 +10,15 @@
     <hr>
     <div class="pagination btn-group">
       {% if page.previous %}
-        <a class="btn prev" href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a>
+        <a class="btn prev" href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; 上一篇</a>
       {% else %}
-        <a class="btn disabled prev">&larr; Previous</a>
+        <a class="btn disabled prev">&larr; 上一篇</a>
       {% endif %}
-        <a class="btn" href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
+        <a class="btn" href="{{ BASE_PATH }}{{ site.JB.archive_path }}">归档</a>
       {% if page.next %}
-        <a class="btn next" href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a>
+        <a class="btn next" href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">下一篇 &rarr;</a>
       {% else %}
-        <a class="btn next disabled">Next &rarr;</a>
+        <a class="btn next disabled">下一篇 &rarr;</a>
       {% endif %}
     </div>
     <hr>
@@ -27,12 +27,12 @@
   
   <div class="span4">
     <section>
-      <h4>Published</h4>
+      <h4>发布日期</h4>
       <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
     </section>
     {% if page.category %}
       <section>
-        <h4>Category</h4>
+        <h4>分类</h4>
         <span class="category">
           {{ page.category }}
         </span>
@@ -40,7 +40,7 @@
     {% endif %}     
     {% unless page.tags == empty %}
       <section>
-        <h4>Tags</h4>
+        <h4>标签</h4>
         <ul class="tag_box">
           {% assign tags_list = page.tags %}
           {% include JB/tags_list %}
