--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -28,7 +28,7 @@
   <div class="span4">
     <section>
       <h4>发布日期</h4>
-      <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
+      <div class="date"><span>{{ page.date | date:"%Y-%m-%d" }}</span></div>
     </section>
     {% if page.category %}
       <section>
